fixed title overflow

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -111,4 +111,10 @@ footer.page-footer{
   .brand-logo{
     font-size: 20px !important;
   }
+  #housing {
+    min-height: 100vh;
+  }
+  .title{
+    font-size: 50px;
+  }
 }
